tests/NormalTests/paczka1/small_fuzzy/12666039.err
Error in line 2: 7U333LRkh A612 59,5
Error in line 12: p7R0IhJR A612 80,7
